# hello-world

./: .gitignore  README.md  environment.devenv.yml  environment.yml  tasks.py
HelloWorld_CPP/: CMakeLists.txt  cmakelists.txt
HelloWorld_CPP/AppHello/: HelloWorld.cpp  cmakelists.txt
HelloWorld_CPP/LibHello/: CMakeLists.txt
HelloWorld_CPP/LibHello/include/: PrintHello.h
HelloWorld_CPP/LibHello/source/: PrintHello.cpp
HelloWorld_Fortran/: hello.f90  hello.f95
HelloWorld_PY/: .pydevproject  HelloWorld.py  PrintHello.py  environment.yml
HelloWorld_Rust/: main.rs
